demo/src/main/java/com/example/demo/web/rest/errors/exceptions/ClientException.java
package com.example.demo.web.rest.errors.exceptions;

import org.springframework.http.HttpStatus;

public class ClientException extends RuntimeException {
    private HttpStatus httpStatus;

    public HttpStatus getHttpStatus() {
        return httpStatus;
    }

    public void setHttpStatus(HttpStatus httpStatus) {
        this.httpStatus = httpStatus;
    }

    public ClientException(String message, HttpStatus httpStatus) {
        super(message);
        this.httpStatus = httpStatus;
    }
}
